Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7721

/catalog_object web API is broken for getting a privilege

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.9.0, Impala 3.0
    • Impala 3.1.0
    • Catalog
    • None
    • ghx-label-3

    Description

      [localhost:21000] > show grant role foo_role;
      +----------+----------+-------+--------+-----+-----------+--------------+-------------------------------+
      | scope    | database | table | column | uri | privilege | grant_option | create_time                   |
      +----------+----------+-------+--------+-----+-----------+--------------+-------------------------------+
      | database | foo      |       |        |     | all       | false        | Wed, Oct 10 2018 10:59:29.495 |
      +----------+----------+-------+--------+-----+-----------+--------------+-------------------------------+
      

      http://localhost:25020/catalog_object?object_type=ROLE&object_name=foo_role

      TCatalogObject {
        01: type (i32) = 7,
        02: catalog_version (i64) = 3,
        08: role (struct) = TRole {
          01: role_name (string) = "foo_role",
          02: role_id (i32) = 2,
          03: grant_groups (list) = list<string>[0] {
          },
        },
      }
      

      http://localhost:25020/catalog_object?object_type=PRIVILEGE&object_name=server%3Dserver1-%3Edatabase%3Dfoo_role.2

      Error: CatalogException: No role associated with ID: 0
      

      Attachments

        Activity

          People

            fredyw Fredy Wijaya
            fredyw Fredy Wijaya
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: